--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+</head>
+
+<body>
+    <div class="container">
+        <form class="search-form" id="search-form">
+            <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+            <button type="submit" class="btn-search">Search</button>
+    </div>
+    </form>
+    <div class="gallery"></div>
+    <button type="button" class="load-more-hidden">Load more</button>
     <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+</body>
 </html>
